# talent_track

./: Dockerfile  LICENSE.md  README.md  docker-compose.yml  hello.py  pyproject.toml  requirements.txt
app/: functions.py  geographic_heatmap.html  pq_modeling.ipynb
talent_track/: app.py  db.py  functions.py
talent_track/examples/: visual_test.ipynb
talent_track/static/css/: style.css
talent_track/static/js/: geography.js  main.js  model_analysis.js  model_monitoring.js  talent_pool.js
talent_track/templates/: geography.html  index.html  model_analysis.html  model_monitoring.html  pipeline.html  talent_pool.html
