[project]
name = "talent_track"
version = "0.1.0"
description = "A talent tracking and recruitment analysis tool"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "numpy>=1.24.3",
    "pandas>=2.0.3",
    "faker>=19.3.0",
    "scikit-learn>=1.3.0",
    "faiss-cpu>=1.7.4",
    "shap>=0.42.1",
    "folium>=0.14.0",
    "geopy>=2.4.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["talent_track"]